# tapi

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  compile_commands.json  get-deps  get-docs  lint-chk  run-tests
.github/workflows/: docs.yml  doxygen.yml
doc/: building.dox  capturing.dox  contribution.dox  doxyfile.in  examples.dox  mainpage.dox  mocking.dox  testing.dox
docs/html/: capture_8c.html  capture_8c__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dyna_8c.html  dyna_8c__incl.md5  files.html  globals.html  globals_func.html  graph_legend.html  index.html  mock_8c.html  mock_8c__incl.md5  sink_8c.html  sink_8c__incl.md5  tapi_8c.html  tapi_8c__incl.md5
docs/html/search/: all_1.js  all_3.js  all_4.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  searchdata.js
include/tapi/: capture.h  dyna.h  mock.h  sink.h  stub.h  tapi.h  test.h
src/: capture.c  dyna.c  entry.c  mock.c  sink.c  stub.c  tapi.c  test.c
src/int/: arch.c  arch.h  det.c  det.h  guard.c  guard.h  intt.h  patch.c  patch.h  stub.c  stub.h
tests/: Makefile  test.c  test_capture.c  test_mock.c
